@@ -1,5 +1,13 @@
 2000-05-06  Dave Peticolas  <peticola@cs.ucdavis.edu>
 
+	* src/engine/Query.c: g_list_sort *returns* the new first node.
+
+	* src/engine/Group.c
+	(xaccAccountsBeginStagedTransactionTraversals): bug fix -- used wrong
+	pointer type.
+	(xaccSplitsBeginStagedTransactionTraversals): bug fix -- used wrong
+	pointer type.
+
 	* src/gnome/reconcile-list.c (gnc_reconcile_list_fill): print the
 	amount using the account's currency.
 
